--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,2 +1,22 @@
-<h3>an unexpected error occurred</h3>
-<p>please contact your administrator</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>BITZER - QR CODE GENERATOR</title>
+    <link rel="shortcut icon" th:href="@{bitzer_tab.ico}" type="image/x-icon"/>
+    <style>
+        div {
+            background-color: #3aaa35;
+            color: white;
+            font-family: 'Roboto', Arial, sans-serif;
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        <h3>An unexpected error occurred.</h3>
+        <p>Please contact your administrator.</p>
+    </div>
+</body>
+</html>
