tracking edit, umlauts and cmyk preselect

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -668,6 +668,7 @@
         } else {
             // If EPS, show both
             cmykOption.style.display = 'block';
+            modelSelect.value = 'cmyk';
         }
         checkColor();
     }
