utm_campaign fix

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -227,13 +227,13 @@
                         </div>
                         <div class="qr-lay-2-1-2 qr-lay-field">
                             <b data-translate-key="12">Tracking URL (editable at a later date)</b><br>
-                            <input type="text" placeholder="${trackingUrl}" value="${trackingUrl}" readonly disabled style="color: #777;">
+                            <input type="text" placeholder="${trackingUrl}" value="${trackingUrl}" readonly style="color: #777;">
                         </div>
                     </div>
                     <div class="qr-lay-2-2">
                        <div class="icon-container" title="Edit"
                          data-qrcodeid='${qrCodeId}'
-                         data-campaignname='${qrCodeName}'
+                         data-campaignname='${campaignName}'
                          data-campaignmedium='${campaignMedium}'
                          data-language='${language}'
                          data-trackingurl='${trackingUrl}'
